--- a/agents/aide/config.yaml
+++ b/agents/aide/config.yaml
@@ -1,6 +1,6 @@
 vars:
   step_count: &step_count 500
-  time_limit: &time_limit 86400 # 24 hrs
+  time_limit: &time_limit 18000  # 86400 24 hrs
 
 defaults: &defaults
   start: aide/start.sh
@@ -38,6 +38,74 @@ aide/dev:
   env_vars:
     <<: *env_vars
     OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+aide/gpt-5-mini:
+  <<: *defaults
+  kwargs:
+    <<: *kwargs_common
+    agent.code.model: gpt-5-mini
+    agent.code.temp: 1
+    agent.feedback.model: gpt-5-mini
+    agent.feedback.temp: 1
+    agent.steps: *step_count
+    agent.convert_system_to_user: True
+  env_vars:
+    <<: *env_vars
+    OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+aide/gpt-5:
+  <<: *defaults
+  kwargs:
+    <<: *kwargs_common
+    agent.code.model: gpt-5
+    agent.code.temp: 1
+    agent.feedback.model: gpt-5
+    agent.feedback.temp: 1
+    agent.steps: *step_count
+    agent.convert_system_to_user: True
+  env_vars:
+    <<: *env_vars
+    OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+
+aide/Qwen3-Coder-480B:
+  <<: *defaults
+  kwargs:
+    <<: *kwargs_common
+    agent.code.model: together_ai/Qwen/Qwen3-Coder-480B-A35B-Instruct-FP8
+    agent.code.temp: 1
+    agent.feedback.model: together_ai/Qwen/Qwen3-Coder-480B-A35B-Instruct-FP8
+    agent.steps: *step_count
+    agent.convert_system_to_user: True
+  env_vars:
+    <<: *env_vars
+    OPENAI_API_KEY: ${{ secrets.Fede_TOGETHER_API }}
+
+aide/Qwen3-235B-Instruct-2507:
+  <<: *defaults
+  kwargs:
+    <<: *kwargs_common
+    agent.code.model: Qwen/Qwen3-235B-A22B-Instruct-2507-tput
+    agent.code.temp: 1
+    agent.feedback.model: Qwen/Qwen3-235B-A22B-Instruct-2507-tput
+    agent.steps: *step_count
+    agent.convert_system_to_user: True
+  env_vars:
+    <<: *env_vars
+    OPENAI_API_KEY: ${{ secrets.Fede_TOGETHER_API }}
+
+aide/Kimi-K2-Thinking:
+  <<: *defaults
+  kwargs:
+    <<: *kwargs_common
+    agent.code.model: moonshotai/Kimi-K2-Thinking
+    agent.code.temp: 1
+    agent.feedback.model: moonshotai/Kimi-K2-Thinking
+    agent.steps: *step_count
+    agent.convert_system_to_user: True
+  env_vars:
+    <<: *env_vars
+    OPENAI_API_KEY: ${{ secrets.Fede_TOGETHER_API }}
+
 
 aide/o1-preview:
   <<: *defaults
