--- a/environment/requirements.txt
+++ b/environment/requirements.txt
@@ -39,7 +39,7 @@ nltk==3.9.1
 numba==0.60.0
 numpy==1.26.4
 ogb==1.3.6
-openai==0.28
+openai
 opencv-python==4.10.0.84
 optuna==4.0.0
 pandas==2.2.2
@@ -90,3 +90,4 @@ tqdm==4.66.5
 transformers==4.44.2
 xgboost==2.1.1
 xlrd==2.0.1
+httpx<0.28
